# upa_url-py

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml  wheels.yml
ext/upa/: public_suffix_list.cpp  url.cpp  url.h
src/: bind_util.h  upa_psl_bind.cpp  upa_url_bind.cpp  upa_url_module.cpp
src/upa_url/: __init__.py
tests/: test_functions.py  test_psl.py  test_url.py
